--- a/index.html
+++ b/index.html
@@ -248,7 +248,6 @@
           <option value="none" data-text="menu.filter_type.none">No filter</option>
           <option value="moonshiner" data-text="menu.filter_type.moonshiner">Moonshiner</option>
           <option value="naturalist" data-text="menu.filter_type.naturalist">Naturalist</option>
-          <option value="weekly" data-text="menu.filter_type.weekly_set">Weekly set</option>
           <option value="important" data-text="menu.filter_type.important_items">Important items</option>
           <option value="static" data-text="menu.filter_type.only_static">Only static</option>
           <option value="hideFlowers" data-text="menu.filter_type.hide_flowers">Hide no ingredients flowers</option>
@@ -420,12 +419,6 @@
         </div>
       </div>
       <hr class="menu-divider">
-      <div class="input-container" data-help="show_weekly">
-        <label for="show-weekly" data-text="menu.show_weekly">Show weekly collection</label>
-        <div class="input-checkbox-wrapper">
-          <input class="input-checkbox" type="checkbox" name="show-weekly" value="1" id="show-weekly" />
-          <label class="input-checkbox-label" for="show-weekly"></label>
-        </div>
       </div>
       <div class="input-container" data-help="show_utilities">
         <label for="show-utilities" data-text="menu.show_utilities">Show utility settings</label>
@@ -906,83 +899,13 @@
         <label data-text="menu.show_updates">Show the latest updates</label>
         <div class="input-action"></div>
       </div>
-      <a class="no-style" href="https://jeanropke.github.io/RDOMap/" target="_blank">
+      <a class="no-style" href="https://chaosvanguard.github.io/Sunrise-rp-locations/" target="_blank">
         <div class="input-container clickable" data-help="rdo_map">
-          <label data-text="menu.rdo_map">RDO Map</label>
+          <label data-text="menu.rdo_map">SunriseRPMap</label>
           <div class="input-action external"></div>
         </div>
       </a>
-      <a class="no-style wiki-page"
-        href="https://github.com/jeanropke/RDR2CollectorsMap/wiki/RDO-Collectors-Map-User-Guide-(English)"
-        target="_blank">
-        <div class="input-container clickable" data-help="read_wiki">
-          <label data-text="menu.read_wiki">Read this map's Wiki</label>
-          <div class="input-action external"></div>
-        </div>
-      </a>
-      <a class="no-style" href="https://github.com/jeanropke/RDR2CollectorsMap/issues" target="_blank">
-        <div class="input-container clickable" data-help="report_issues">
-          <label data-text="menu.report_issues">Report issues here</label>
-          <div class="input-action external"></div>
-        </div>
-      </a>
-      <a class="no-style" href="https://discord.com/invite/eRPCBDy" target="_blank">
-        <div class="input-container clickable" data-help="join_discord">
-          <label data-text="menu.join_discord">Join our Discord</label>
-          <div class="input-action external"></div>
-        </div>
-      </a>
-      <form class="donate-form" data-help="donate" action="https://www.paypal.com/cgi-bin/webscr" method="post"
-        target="_blank">
-        <input type="hidden" name="cmd" value="_donations" />
-        <input type="hidden" name="business" value="X3A9DHBPW3B2A" />
-        <input type="hidden" name="lc" value="en_US" />
-
-        <input type="image" src="./assets/images/donate.png" border="0" name="submit" title="Donate with PayPal"
-          alt="Donate with PayPal button" />
-        <select class="input-text" name="currency_code">
-          <option value="AUD">AUD $</option>
-          <option value="BRL">BRL R$</option>
-          <option value="CAD">CAD $</option>
-          <option value="CHF">CHF Fr.</option>
-          <option value="CZK">CZK Kč</option>
-          <option value="DKK">DKK kr.</option>
-          <option value="EUR">EUR €</option>
-          <option value="GBP">GBP £</option>
-          <option value="HKD">HKD $</option>
-          <option value="HUF">HUF Ft</option>
-          <option value="ILS">ILS ₪</option>
-          <option value="JPY">JPY ‎¥‎</option>
-          <option value="MXN">‎MXN $‎</option>
-          <option value="MYR">MYR RM</option>
-          <option value="NOK">NOK kr</option>
-          <option value="NZD">NZD $</option>
-          <option value="PHP">‎PHP ₱</option>
-          <option value="PLN">PLN gr</option>
-          <option value="RUB">RUB ₽</option>
-          <option value="SEK">SEK kr</option>
-          <option value="SGD">SGD $</option>
-          <option value="THB">THB ฿</option>
-          <option value="TWD">TWD $</option>
-          <option value="USD" selected>USD $</option>
-        </select>
-      </form>
       <hr class="menu-divider">
-      <div class="input-container-noflex">
-        <h4 class="no-margin-top" data-text="menu.sponsors">Sponsors</h4>
-      </div>
-      <a class="no-style" href="https://crowdin.com/?utm_source=badge&utm_medium=referral&utm_campaign=badge-add-on" rel="nofollow" target="_blank">
-        <div class="input-container clickable" style="align-items: center;">
-          <label>Crowdin</label>
-          <img style="width:140;height:40px;opacity:0.8;" src="https://badges.crowdin.net/badge/light/crowdin-on-dark.png" srcset="https://badges.crowdin.net/badge/light/crowdin-on-dark.png 1x,https://badges.crowdin.net/badge/light/crowdin-on-dark@2x.png 2x" alt="Crowdin | Agile localization for tech companies" />
-        </div>
-      </a>
-      <a class="no-style" href="https://sentry.io/welcome/" rel="nofollow" target="_blank">
-        <div class="input-container clickable" style="align-items: center;">
-          <label>Sentry</label>
-          <svg style="width:135;height:40px;background-color: rgb(204, 204, 204);border-radius:5px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 222 66" width="135" height="40"><path d="M29,2.26a4.67,4.67,0,0,0-8,0L14.42,13.53A32.21,32.21,0,0,1,32.17,40.19H27.55A27.68,27.68,0,0,0,12.09,17.47L6,28a15.92,15.92,0,0,1,9.23,12.17H4.62A.76.76,0,0,1,4,39.06l2.94-5a10.74,10.74,0,0,0-3.36-1.9l-2.91,5a4.54,4.54,0,0,0,1.69,6.24A4.66,4.66,0,0,0,4.62,44H19.15a19.4,19.4,0,0,0-8-17.31l2.31-4A23.87,23.87,0,0,1,23.76,44H36.07a35.88,35.88,0,0,0-16.41-31.8l4.67-8a.77.77,0,0,1,1.05-.27c.53.29,20.29,34.77,20.66,35.17a.76.76,0,0,1-.68,1.13H40.6q.09,1.91,0,3.81h4.78A4.59,4.59,0,0,0,50,39.43a4.49,4.49,0,0,0-.62-2.28Z M124.32,28.28,109.56,9.22h-3.68V34.77h3.73V15.19l15.18,19.58h3.26V9.22h-3.73ZM87.15,23.54h13.23V20.22H87.14V12.53h14.93V9.21H83.34V34.77h18.92V31.45H87.14ZM71.59,20.3h0C66.44,19.06,65,18.08,65,15.7c0-2.14,1.89-3.59,4.71-3.59a12.06,12.06,0,0,1,7.07,2.55l2-2.83a14.1,14.1,0,0,0-9-3c-5.06,0-8.59,3-8.59,7.27,0,4.6,3,6.19,8.46,7.52C74.51,24.74,76,25.78,76,28.11s-2,3.77-5.09,3.77a12.34,12.34,0,0,1-8.3-3.26l-2.25,2.69a15.94,15.94,0,0,0,10.42,3.85c5.48,0,9-2.95,9-7.51C79.75,23.79,77.47,21.72,71.59,20.3ZM195.7,9.22l-7.69,12-7.64-12h-4.46L186,24.67V34.78h3.84V24.55L200,9.22Zm-64.63,3.46h8.37v22.1h3.84V12.68h8.37V9.22H131.08ZM169.41,24.8c3.86-1.07,6-3.77,6-7.63,0-4.91-3.59-8-9.38-8H154.67V34.76h3.8V25.58h6.45l6.48,9.2h4.44l-7-9.82Zm-10.95-2.5V12.6h7.17c3.74,0,5.88,1.77,5.88,4.84s-2.29,4.86-5.84,4.86Z" transform="translate(11, 11)" fill="#362d59"></path></svg>
-        </div>
-      </a>
     </div>
 
     <div id="bottom-sticky">
@@ -1022,39 +945,12 @@
     <p></p><button id="lat-lng-container-close-button">×</button>
   </div>
 
-  <div class="map-cycle-alert hidden">
-    <span data-text="map.refresh_for_updates_alert">Today's cycles haven't been updated yet.
-      Please refresh to check for updates.</span>
-  </div>
-
   <div class="filter-alert" style="display: none;">
     Some markers are being hidden.
   </div>
 
   <!-- Modals -->
-  <div class="modal fade" id="fme-enabled-events-modal" tabindex="-1" role="dialog"
-    aria-labelledby="fme-enabled-events-title">
-    <div class="modal-dialog modal-sm" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title" id="fme-enabled-events-title" data-text="menu.modal_fme_enabled_events_title">
-            Free Roam Event Settings
-          </h4>
-        </div>
-        <div class="modal-body">
-          <p data-text="menu.modal_fme_enabled_events_body">
-            Select which events you want to display on the map and/or to receive notifications for.
-          </p>
-          <div id="events" class="settings-container"></div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.close">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade" id="map-updates-modal" tabindex="-1" role="dialog" aria-labelledby="map-updates-title">
+ <div class="modal fade" id="map-updates-modal" tabindex="-1" role="dialog" aria-labelledby="map-updates-title">
     <div class="modal-dialog modal-updates" role="document">
       <div class="modal-content">
         <div class="modal-header">
