--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Sunrise RP - Collectors Map</title>
+  <title>Ranch RP - Herbs Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
-    content="Sunrise RP Collectors Map. Find all collectibles across the County.">
+    content="Ranch RP Herb Map.">
   <meta name="keywords"
-    content="Sunrise, Collectors Map, Collectors Map, Map, Interactive Map, Interactive">
+    content="Ranch, Herbs, Herb Map, Map, Interactive Map, Interactive">
 
   <link rel="apple-touch-icon" sizes="60x60" href="./apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
@@ -1134,45 +1134,6 @@
     </div>
   </div>
 
-  <div class="modal fade" id="import-rdo-inventory-modal" tabindex="-1" role="dialog" aria-labelledby="import-rdo-inventory-modal-title">
-    <div class="modal-dialog modal-updates" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title" id="import-rdo-inventory-modal-title" data-text="menu.modal_import_rdo_inventory_title">Import RDO character inventory</h4>
-        </div>
-        <div class="modal-body" style="text-align: left;">
-          <p data-text="menu.modal_import_rdo_inventory_extension">You can sync your inventory using this extension. Just install it and press one button. Compatible with Chromium based browsers like Brave, Google Chrome, Microsoft Edge, Opera.</p>
-          <p class="chrome-store-button">
-            <a href="https://chrome.google.com/webstore/detail/red-dead-online-collector/ppkogdbkpfkienlkjoicbpogdeonalih" target="_blank">
-              <img src="./assets/images/chrome_web_store.png">
-            </a>
-          </p>
-          <div class="header">
-            <span class="header-border"></span>
-            <h2 class="header-title" data-text="menu.modal_import_rdo_inventory_manual">Manual</h2>
-            <span class="header-border"></span>
-          </div>
-          <p data-text="menu.modal_import_rdo_inventory_intro">To import your character inventory to this map, follow this steps:</p>
-
-          <p data-text="menu.modal_import_rdo_inventory_step_1">1. <a href="https://socialclub.rockstargames.com/games/rdo/overview" target="_blank">Log in</a> your Social Club account.</p>
-          <p data-text="menu.modal_import_rdo_inventory_step_2">2. Click box bellow to copy its content.</p>
-          <textarea id="inventory-script" class="input-text" style="max-width: 100%;min-width: 100%;max-height:45px;min-height:45px;margin:10px 0" readonly>fetch('https://jeanropke.github.io/RDR2CollectorsMap/assets/js/rdo-inventory.js').then(data => data.text()).then(eval);</textarea>
-          <p data-text="menu.modal_import_rdo_inventory_step_3">3. Open your browser console on Social Club website and paste the script from step 2 and press enter.</p>
-          <br>
-          <p data-text="menu.modal_import_rdo_inventory_final">If everything is right, a new file will be downloaded with your inventory data. Just import it using the button bellow.</p>
-          <br>
-          <div class="input-container-noflex">
-            <input id="rdo-inventory-import-file" type="file" class="input-file" accept=".json" autocomplete="off">
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-text="menu.close">Close</button>
-          <button id="import-rdo-inventory" type="button" class="btn btn-primary" data-text="menu.import_button">Import</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- ES6 Compatibility Check -->
   <script>function isES6() { try { return eval("() => {};"), !0 } catch (r) { return !1 } } isES6() || alert("This browser might not be fully supported, and errors will likely occur. Please update your browser if you experience issues.");</script>
 
@@ -1195,19 +1156,13 @@
   <script src="assets/js/settings.js?nocache=1584"></script>
   <script src="assets/js/mapping.js?nocache=1584"></script>
   <script src="assets/js/fme.js?nocache=1584"></script>
-  <script src="assets/js/cycles.js?nocache=1584"></script>
   <script src="assets/js/marker.js?nocache=1584"></script>
-  <script src="assets/js/inventory.js?nocache=1584"></script>
-  <script src="assets/js/treasures.js?nocache=1584"></script>
-  <script src="assets/js/legendary.js?nocache=1584"></script>
   <script src="assets/js/pins.js?nocache=1584"></script>
   <script src="assets/js/map.js?nocache=1584"></script>
   <script src="assets/js/language.js?nocache=1584"></script>
   <script src="assets/js/menu.js?nocache=1584"></script>
   <script src="assets/js/items.js?nocache=1584"></script>
   <script src="assets/js/category-collection.js?nocache=1584"></script>
-  <script src="assets/js/routes.js?nocache=1584"></script>
-  <script src="assets/js/pathfinder.main.js?nocache=1584"></script>
   <script src="assets/js/updates.js?nocache=1584"></script>
   <script src="assets/js/scripts.js?nocache=1584"></script>
 
