--- a/index.html
+++ b/index.html
@@ -1159,6 +1159,7 @@
   <script src="assets/js/pins.js?nocache=1584"></script>
   <script src="assets/js/map.js?nocache=1584"></script>
   <script src="assets/js/language.js?nocache=1584"></script>
+  <script src="assets/js/menu.js?nocache=1584"></script>
   <script src="assets/js/category-collection.js?nocache=1584"></script>
   <script src="assets/js/updates.js?nocache=1584"></script>
   <script src="assets/js/scripts.js?nocache=1584"></script>
